Add a "Déjà arrivé à la fin ?" panel to suggest to look at other tabs

--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -50,6 +50,23 @@
                     {% endfor %}
                 </div>
             {% endfor %}
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Déjà arrivé à la fin ?</h3>
+                </div>
+                <div class="panel-body">
+                    N'oublie pas d'aller voir les
+                    <a href="#tab-finished" data-toggle="tab">
+                        <span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>
+                        projets finis
+                    </a>
+                    et les
+                    <a href="#tab-proposition" data-toggle="tab">
+                        <span class="glyphicon glyphicon-leaf" aria-hidden="true"></span>
+                        propositions de projet!
+                    </a>
+                </div>
+            </div>
         </div>
         <div class="tab-pane" id="tab-finished">
             <br>
