--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -42,7 +42,8 @@
         <div class="tab-pane active" id="tab-now">
             <br>
             <p>Ici, vous trouverez les projets en cours de réalisation au Hackerspace. Tous ces projets sont ouverts à tous, n'hésitez pas à vous rajouter dans un projet pour aider, apprendre ou juste regarder.
-                Vous êtes aussi invités à ajouter vos propres projets ci dessus, n'ayez pas peur, on est ouverts à tout !</p>
+                Vous êtes aussi invités à ajouter vos propres projets ci dessus, n'ayez pas peur, on est ouverts à tout !
+            </p>
             {% for row in progress %}
                 <div class="row">
                     {% for project in row %}
