--- a/projects/templates/project_card.html
+++ b/projects/templates/project_card.html
@@ -35,7 +35,7 @@
       <p class="row-fluid text-center">
           <a href="{% url "view_project" project.id %}" class="btn btn-primary" role="button">
               <i class="fa fa-eye" aria-hidden="true"></i>
-              Voir plus
+              Voir
           </a>
           {% if request.user != project.maintainer and request.user not in project.participants.all %}
             <a href="{% url "project_add_participation" project.id %}" class="btn btn-default" role="button">
