--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -133,8 +133,11 @@
                 <h3>Probabilités d'ouverture<br>
                     <small>6 dernières semaines</small></h3>
                 <p></p>
+                {% include "opening_d3.html" %}
+                <!--
                 <img src="{% url "openings_graph" %}?weeks=6&width=9&height=3&weekday_django={% now 'w' %}"
                      alt="Ouverture" style="width: 100%" />
+                -->
             </div>
         </div>
 
