--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -130,8 +130,7 @@
                 <h4>Téléphone
                     <small>02/650.49.67</small>
                 </h4>
-                <h3>Probabilités d'ouverture<br>
-                    <small>6 dernières semaines</small></h3>
+                <h3>Probabilités d'ouverture</h3>
                 <p></p>
                 {% include "opening_d3.html" %}
                 <!--
