--- a/space/templates/opening_d3.html
+++ b/space/templates/opening_d3.html
@@ -1,5 +1,6 @@
 {% load static %}
 <svg></svg>
+<div id="plot-legend"></div>
 <script src="{% static "js/babel.min.js" %}"></script>
 <script src="{% static "js/d3.v4.min.js" %}"></script>
 <script type="text/babel">
@@ -95,7 +96,6 @@
               .attr("fill", "black")
               .attr("font-size", w)
               .attr("font-family", "Arial")
-              .attr("font-weight", "bolder")
 
         function updateNow(){
             setBig(groups, false)
@@ -106,7 +106,10 @@
 
     $(document).ready(_ => {
         let url = '{% url "openings_graph_data" %}?weeks=6&width=9&height=3&weekday_django={% now "w" %}'
-        $.getJSON(url, data => draw_openings_plot(data.probs))
+        $.getJSON(url, data => {
+            draw_openings_plot(data.probs)
+            $('#plot-legend').html(data.range)
+        })
     })
 })()
 </script>
