[fix] Plot height

--- a/space/templates/opening_d3.html
+++ b/space/templates/opening_d3.html
@@ -40,7 +40,7 @@
 
         let svg = d3.select("svg")
                     .attr("width", W+48*p)
-                    .attr("height", H+w);
+                    .attr("height", H+2*w);
 
         function setBig(elmt, big){
             let group = elmt.transition().duration(200)
