--- a/space/templates/opening_d3.html
+++ b/space/templates/opening_d3.html
@@ -105,7 +105,7 @@
     }
 
     $(document).ready(_ => {
-        let url = '{% url "openings_graph_data" %}?days=0'
+        let url = '{% url "openings_graph_data" %}?future_days=2'
         $.getJSON(url, data => {
             draw_openings_plot(data.probs)
             $('#plot-legend').html(data.range)
