--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -7,9 +7,9 @@
     <div class="row">
 
         <div class="col-md-8">
-            {% if message and message.content != "" %}
-                <div class="alert alert-danger" role="alert">
-                    {{ message.content|markdown }}
+            {% if message and message != "" %}
+                <div class="alert alert-{{message_type}}" role="alert">
+                    {{ message|markdown }}
 
                 </div>
             {% endif %}
