--- a/incubator/templates/admin/base_site.html
+++ b/incubator/templates/admin/base_site.html
@@ -7,7 +7,7 @@
     <div class="content">
 
       <div class="branding">{% block footer_branding %}
-        UrLaB
+        UrLab
       {% endblock %}</div>
     </div>
   </div>
