Show names of people interested in events (#134)
* [upd] Change template to list people interested in event

* [chng] Convert list to dropdown menu with links to user profiles

--- a/events/templates/event_detail.html
+++ b/events/templates/event_detail.html
@@ -34,10 +34,23 @@
                 {% with interested=event.interested.all %}
                   {% if interested.count == 0 %}
                     Personne n'est intéressé pour l'instant
-                  {% elif interested.count == 1 %}
-                    Une personne est intéressée
                   {% else %}
-                    {{interested.count}} personnes sont intéressés
+                    {% if interested.count == 1 %}
+                      Une personne est intéressée
+                    {% else %}
+                      {{interested.count}} personnes sont intéressés
+                    {% endif %}
+                    <div class="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        Interested People
+                        <span class="caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        {% for person in interested %}
+                          <li><a href="{% url "user_profile" person.username %}">{{person}}</a></li>
+                        {% endfor %}
+                      </ul>
+                    </div>
                   {% endif %}
                   {% if request.user in interested %}
                     <a class="btn btn-primary btn-xs" href="{% url "not_interested_event" event.id %}">
