adding a diplomatic passport badge

--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -136,6 +136,9 @@
                 <img src="{% url "openings_graph" %}?weeks=6&width=9&height=3&weekday_django={% now 'w' %}"
                      alt="Ouverture" style="width: 100%" />
                 -->
+                <br>
+                <a href=https://www.noisebridge.net/wiki/Passport>
+                <img src="https://www.noisebridge.net/images/0/0e/Passport-badge2.png" alt="Hackerspace Passports Accepted Here" title="Hackerspace Passports Accepted Here" border=0></a>
             </div>
         </div>
 
