[add] link to new.html in the navbar

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -92,6 +92,12 @@
                                 Pamela
                             </a>
                         </li>
+                        <li class="">
+                            <a href="{% url "new" %}">
+                                <i class="fa fa-info-circle"></i>
+                                Nouveau au hackerspace ?
+                            </a>
+                        </li>
 
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
