[enh] spell check

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -77,7 +77,7 @@
                         <li class="{% active_if_contains "/events/" %}">
                             <a href="{% url "events_home" %}">
                                 <i class="fa fa-calendar"></i>
-                                Evénements
+                                Évènements
                             </a>
                         </li>
                         <li class="{% active_if_contains "/wiki/" %}">
