--- a/incubator/templates/new.html
+++ b/incubator/templates/new.html
@@ -4,37 +4,67 @@
 {% load humanize %}
 
 {% block content %}
-    <h1>Bienvenue au hackerspace de l'ULB!</h1>
-    <h2>Venir au hackerspace</h2>
-    <p>Le hackerspace est ouvert du lundi au vendredi. </br>
-        On essaie d'être ouvert le plus longtemps possible(de 8h30 à 23h00) mais ce n'est pas sûr!
-        Pour voir si on est ouvert, rends toi sur <a href="https://urlab.be/space/pamela">pamela</a>.
-    </p>
-    <h2>Qu'est-ce que le hackerspace</h2>
-    * voir tableau
-    <h2>Qu'est-ce que n'est <strong>PAS</strong> le hackerspace</h2>
-    * voir tableau
-    <h2>S'investir au hackerspace</h2>
-    * FOSDEM
-    * projet
-    * events
-    <h2>La vie au hackerspace</h2>
-    * communauté
-    * course
-    * poubelle
+    <h1>Bienvenue à UrLab, le hackerspace de l'ULB!</h1>
+        <h2>Venir au hackerspace</h2>
+        <p>Le hackerspace est ouvert du lundi au vendredi. </br>
+            On essaie d'être ouvert le plus longtemps possible(de 8h30 à 23h00) mais ce n'est pas sûr!
+            Pour voir si on est ouvert, rends toi sur <a href="https://urlab.be/space/pamela">pamela</a>.
+        </p>
 
+        <h2>Qu'est-ce que le hackerspace</h2>
+        * voir tableau
 
-    <h2>Proposer un projet</h2>
-    <h3>Créer une proposition sur le site</h3>
-    <p>Tu as fais le tour des projets en cours et des propositions et rien ne t'intéresse ?
-        Tu voudrais proposer ton projet ? rien de plus simple ! Sur la page Nos projets, en bas de la
-        page, il y a un bouton proposer. Clique dessus et remplis le form qui te sera proposer.
-        Lorsque tu arrives dans l'espace description, pour rendre celle-ci plus lisible, tu dois utiliser
-        <strong>markdown</strong>. C'est langage de formatage de texte. Voici deux liens pour apprendre
-        (comprend copier/coller) rapidement comment mettre ta description en page.</br>
-        <a href="https://en.support.wordpress.com/markdown-quick-reference/">markdown quick reference</a></br>
-        <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">markdown cheat sheet</a></br>
-    </p>
-    <h3>Demander un budget</h3>
-    <h2>Matériel à disposition</h2>
+        <h2>Qu'est-ce que n'est <strong>PAS</strong> le hackerspace</h2>
+        * voir tableau
+
+        <h2>S'investir au hackerspace</h2>
+            <h3>Les projets</h3>
+            <h3>Les évènements</h3>
+                <p>Nous organisons des évènements tout au long de l'année. La grande majorité sont gratuits
+                    et pour tous! (Il y a que pour les barbecues qu'on demande une P.A.F)</br>
+                    Le but des ces évènements:
+                    <ul>
+                        <li>Aider les BA1 en informatique (mais pas qu'eux!),</li>
+                        <li>promouvoir l'informatique au sein de l'ULB,</li>
+                        <li>apprendre à utiliser des outils indispensable à tous programmeurs,</li>
+                        <li>et pleins d'autres choses !</li>
+                    </ul>
+                </p>
+            <h3>Ramener des fonds</h3>
+                <p>
+                    Deux gros évènements nous permettent de remplir nos caisses:
+                    <ul>
+                        <li> <a href="fosdem.org">le FOSDEM</a> organisé par le CI</li>
+                        <li> <a href="http://www.sciences.be/evenements/printemps-des-sciences/">le printemps des sciences</a></li>
+                    </ul>
+                    Grâce à ça, nous pouvons:
+                        <ul>
+                            <li> Acheter du matériel technologique qui coûte la peau du cul (inmprimante 3D) </li>
+                            <li> Refaire le stock de club-mate, fritz-cola, ...</li>
+                            <li> Faire tourner le hackerspace en général</li>
+                        </ul>
+                    Toute aide est plus que la bienvenue !
+                </p>
+
+        <h2>La vie au hackerspace</h2>
+            <h3>La communauté</h3>
+            <h3>Les courses</h3>
+            <h3>les poubelles</h3>
+
+        <h2>Proposer un projet</h2>
+            <h3>Se rajouter à un projet</h3>
+            <h3>Proposer un projet</h3>
+            <p>Tu as fais le tour des projets en cours et des propositions et rien ne t'intéresse ?
+                Tu voudrais proposer ton projet ? rien de plus simple ! Sur la page Nos projets, en bas de la
+                page, il y a un bouton proposer. Clique dessus et remplis le form qui te sera proposer.
+                Lorsque tu arrives dans l'espace description, pour rendre celle-ci plus lisible, tu dois utiliser
+                <strong>markdown</strong>. C'est langage de formatage de texte. Voici deux liens pour apprendre
+                (comprend copier/coller) rapidement comment mettre ta description en page.</br>
+                <a href="https://en.support.wordpress.com/markdown-quick-reference/">markdown quick reference</a></br>
+                <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">markdown cheat sheet</a></br>
+            </p>
+            <h3>Demander un budget</h3>
+
+        <h2>Matériel à disposition</h2>
+
 {% endblock %}
