--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -49,6 +49,12 @@
                     {% include "map.html" %}
                 </div>
             </div>
+        {% else %}
+            <div class="col-md-4">
+                <div class="row">
+                    {% include "map.html" %}
+                </div>
+            </div>
         {% endif %}
     </div>
 
