[add] map on home page

--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -49,6 +49,10 @@
                     {% include "map.html" %}
                 </div>
             </div>
+        {% else %}
+            <div class="col-md-4">
+                {% include "map.html" %}
+            </div>
         {% endif %}
     </div>
 
