finish draft for new hacker

--- a/incubator/templates/new.html
+++ b/incubator/templates/new.html
@@ -19,6 +19,7 @@
 
         <h2>S'investir au hackerspace</h2>
             <h3>Les projets</h3>
+                <p>Voir plus bas</p>
             <h3>Les évènements</h3>
                 <p>Nous organisons des évènements tout au long de l'année. La grande majorité sont gratuits
                     et pour tous! (Il y a que pour les barbecues qu'on demande une P.A.F)</br>
@@ -30,16 +31,17 @@
                         <li>et pleins d'autres choses !</li>
                     </ul>
                 </p>
-            <h3>Ramener des fonds</h3>
+
+            <h3>Aider le hackerspace</h3>
                 <p>
-                    Deux gros évènements nous permettent de remplir nos caisses:
+                    Deux gros évènements nous permettent de gagner de l'argent pour financer les projets:
                     <ul>
-                        <li> <a href="fosdem.org">le FOSDEM</a> organisé par le CI</li>
-                        <li> <a href="http://www.sciences.be/evenements/printemps-des-sciences/">le printemps des sciences</a></li>
+                        <li> <a href="fosdem.org">le FOSDEM</a> organisé par le CI (le premier we de février)</li>
+                        <li> <a href="http://www.sciences.be/evenements/printemps-des-sciences/">le printemps des sciences</a> (en mars)</li>
                     </ul>
                     Grâce à ça, nous pouvons:
                         <ul>
-                            <li> Acheter du matériel technologique qui coûte la peau du cul (inmprimante 3D) </li>
+                            <li> Acheter du matériel technologique qui coûte cher (inmprimante 3D) </li>
                             <li> Refaire le stock de club-mate, fritz-cola, ...</li>
                             <li> Faire tourner le hackerspace en général</li>
                         </ul>
@@ -48,22 +50,44 @@
 
         <h2>La vie au hackerspace</h2>
             <h3>La communauté</h3>
-            <h3>Les courses</h3>
-            <h3>les poubelles</h3>
+                <p>Dès lors que tu viens au hackerspace ou participe à ces évènements, etc. tu fais partie de la communauté.
+                   Cependant, si tu veux pouvoir voter aux réunions, tu dois payer ta cotisation(5€) et ainsi
+                   devenir membre.</p>
 
-        <h2>Proposer un projet</h2>
+            <h3>Les courses</h3>
+                <p>Malheureusement, la cuisine ne se remplit pas automatiquement. Lorsque vous voyez qu'un produit
+                manque, n'hésitez pas à créer une liste de course sur le tableau.</p>
+                <p>N'hésitez pas à aller faire les courses spontanément (par exemple si vous allez acheter
+                    un en-cas au okay). Sinon, le membre du comité présent demandera aux gens présents
+                    au hackerspace de l'aider.</p>
+
+            <h3>les poubelles</h3>
+                <p>C'est lechbot, sur irc, qui décide qui doit sortir quelle poubelle. Cependant, si vous voyez
+                qu'une poubelle est remplie et menace de déborder n'hésiter pas à aller la jeter.
+                <a href="http://www.ulb.ac.be/environnement/docs/Campus/Dechets/molok_solbosch.jpg">
+                Voici une liste des différents endroits ou il y a des poubelles sur le campus.</a></p>
+
+            <h3>Les snacks/boissons</h3>
+                <p>Les snacks et boissons sont disponibles dans la cuisine. Le prix est marqué sur
+                l'ardoise. Il y a deux moyen de payer, en mettant l'argent dans la caisse ou en faisant un virement.</p>
+
+        <h2>Les projets</h2>
             <h3>Se rajouter à un projet</h3>
             <h3>Proposer un projet</h3>
             <p>Tu as fais le tour des projets en cours et des propositions et rien ne t'intéresse ?
                 Tu voudrais proposer ton projet ? rien de plus simple ! Sur la page Nos projets, en bas de la
-                page, il y a un bouton proposer. Clique dessus et remplis le form qui te sera proposer.
+                page, il y a un bouton "proposer". Clique dessus et remplis le formulaire qui te sera proposer.
                 Lorsque tu arrives dans l'espace description, pour rendre celle-ci plus lisible, tu dois utiliser
                 <strong>markdown</strong>. C'est langage de formatage de texte. Voici deux liens pour apprendre
                 (comprend copier/coller) rapidement comment mettre ta description en page.</br>
                 <a href="https://en.support.wordpress.com/markdown-quick-reference/">markdown quick reference</a></br>
                 <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">markdown cheat sheet</a></br>
             </p>
+
             <h3>Demander un budget</h3>
+            <p>Si ton projet avance, tu peux rajouter un point à l'ordre du jour de la prochaine réunion.
+            Tu viendras défendre (plus présenter) ton projet à la réunion et à quoi le budget servira et
+            ensuite, les membres présents à la réunion voteront la demande de budget.</p>
 
         <h2>Matériel à disposition</h2>
 
