[fix] bad url (fosdem), add what is the hackerspace and what is not the hackerspace

--- a/incubator/templates/new.html
+++ b/incubator/templates/new.html
@@ -12,10 +12,26 @@
         </p>
 
         <h2>Qu'est-ce que le hackerspace</h2>
-        * voir tableau
+            <ul>
+                <li>un atelier</li>
+                <li>de l'entraide</li>
+                <li>des rencontres</li>
+                <li>des projets</li>
+                <li>du partage</li>
+                <li>de la technologie</li>
+                <li>de la merde (de temps en temps ;) )</li>
+            </ul>
 
         <h2>Qu'est-ce que n'est <strong>PAS</strong> le hackerspace</h2>
-        * voir tableau
+            <ul>
+                <li>une bibliothèque</li>
+                <li>la guidance en informatique</li>
+                <li>un cyber-café</li>
+                <li>une salle d'attente</li>
+                <li>une ludothèque</li>
+                <li>un cinéma</li>
+                <li>une salle de concert</li>
+            </ul>
 
         <h2>S'investir au hackerspace</h2>
             <h3>Les projets</h3>
@@ -36,7 +52,7 @@
                 <p>
                     Deux gros évènements nous permettent de gagner de l'argent pour financer les projets:
                     <ul>
-                        <li> <a href="fosdem.org">le FOSDEM</a> organisé par le CI (le premier we de février)</li>
+                        <li> <a href="http://www.fosdem.org">le FOSDEM</a> organisé par le CI (le premier we de février)</li>
                         <li> <a href="http://www.sciences.be/evenements/printemps-des-sciences/">le printemps des sciences</a> (en mars)</li>
                     </ul>
                     Grâce à ça, nous pouvons:
