--- a/projects/templates/project_card.html
+++ b/projects/templates/project_card.html
@@ -37,6 +37,17 @@
               <i class="fa fa-eye" aria-hidden="true"></i>
               Voir
           </a>
+          {% if user not in project.likes.all %}
+            <a href="{% url "project_like" project.id %}" class="btn btn-primary" role="button">
+                <i class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></i>
+                Like<span class="badge">{{project.likes.count}}</span>
+            </a>
+          {% else %}
+          <a href="{% url "project_unlike" project.id %}" class="btn btn-danger" role="button">
+              <i class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></i>
+              Unlike<span class="badge">{{project.likes.count}}</span>
+          </a>
+          {% endif %}
           {% if request.user != project.maintainer and request.user not in project.participants.all %}
             <a href="{% url "project_add_participation" project.id %}" class="btn btn-default" role="button">
                 <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
