Auto switch to current tab on projects page

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -155,6 +155,8 @@
     </div>
 </footer>
 {% render_block "js" %}
+{% block js %}
+{% endblock %}
 <script src="{% static "js/navbar.js" %}"></script>
 {% analytical_body_bottom %}
 </body>
