Adding twitter flow

--- a/space/templates/map.html
+++ b/space/templates/map.html
@@ -79,5 +79,7 @@
         </h4>
         <h3>Probabilités d'ouverture</h3>
         {% include "opening_d3.html" %}
+        <br>
+        <a class="twitter-timeline" data-height="850" data-link-color="#19CF86" href="https://twitter.com/UrLabBxl?ref_src=twsrc%5Etfw">Tweets by UrLabBxl</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>  
     </div>
 </div>
