[fix] bad wiki home reverse url

--- a/wiki/templates/article_detail.html
+++ b/wiki/templates/article_detail.html
@@ -9,7 +9,7 @@
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="/">UrLab</a></li>
-  <li><a href="{% url "projects_home" %}">wiki</a></li>
+  <li><a href="{% url "wiki_home" %}">wiki</a></li>
   <li class="active">{{article.title}}</li>
 </ol>
 
