--- a/wiki/templates/wiki_card.html
+++ b/wiki/templates/wiki_card.html
@@ -1,22 +1,22 @@
 <div class="col-sm-6 col-md-3">
   <div class="thumbnail">
-    <a href="{% url "view_wiki" wiki.id %}">
-    {% if not wiki.picture %}
+    <a href="{% url "view_article" article.pk %}">
+    {% if not article.picture %}
       <img src="/static/img/default-project.png" style="height: 15em; width:100%; object-fit: cover;">
     {% else %}
-      <img src="{{wiki.picture.url}}" style="height: 15em; width:100%; object-fit: cover;">
+      <img src="{{article.picture.url}}" style="height: 15em; width:100%; object-fit: cover;">
     {% endif %}
     </a>
     <div class="caption">
       <h3 class="row-fluid">
-          {{ wiki.title }}
+          {{ article.title }}
       </h3>
       <p class="row-fluid text-center">
-          <a href="{% url "view_project" project.id %}" class="btn btn-primary" role="button">
+          <a href="{% url "view_article" article.pk %}" class="btn btn-primary" role="button">
               <i class="fa fa-eye" aria-hidden="true"></i>
               Voir
           </a>
-            <a href="{% url "edit_subject" wiki.id %}" class="btn btn-default" role="button">
+            <a href="{% url "edit_article" article.pk %}" class="btn btn-default" role="button">
                 <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                 Éditer
             </a>
