own page for past events + don't show all past events

--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -60,6 +60,7 @@ Evénements de UrLab
     {% empty %}
       <p>Il n'y a aucun événement passé, future is NOW !</p>
     {% endfor %}
+    <a href="{% url "events_past" %}"> Evénements passés suite...<a>
   </div>
 </div>
 
