better looking bitch

--- a/events/templates/events_past.html
+++ b/events/templates/events_past.html
@@ -8,12 +8,14 @@ Evénements de UrLab
 
 <ol class="breadcrumb">
   <li><a href="/">UrLab</a></li>
-  <li class="active">Événements</li>
+  <li><a href="/events">Événements</a></li>
+  <li class="active">passé</li>
+
 </ol>
 
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-2">
 
 
     <h1>
